@@ -108,7 +108,7 @@ extern "C" {
  */
 
 EXTERN void
-panic _ANSI_ARGS_ ((char* format, ...));
+panic _ANSI_ARGS_ (TCL_VARARGS(char*, format));
 
 #undef  Tcl_Panic
 #define Tcl_Panic panic
